[package]
name = "brc20-prog-balance-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.3.1"
alloy-sol-macro = "1.3.1"
alloy-sol-types = "1.3.1"
base64 = "0.22.1"
brc20-prog = "0.10.3"
dotenvy = "0.15.7"
hex = "0.4.3"
http = "1.3.1"
jsonrpsee = { version = "0.25.0", features = ["client", "http-client", "tokio"] }
rust-embed = "8.7.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.20.0", features = ["macros"]}
uuid = { version = "1.18.1", features = ["v4"] }
